--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
